# rurussian-mcp

./: .gitignore  Dockerfile  LICENSE  MAINTENANCE.md  README.md  SKILL.md  patch_cli_py.py  patch_dev_repo.py  patch_route_ts.py  patch_service_py.py  pyproject.toml
docs/: INTEGRATION.md
examples/: openclaw_config.json  tool_examples.json
rurussian_mcp/: config.py  server.py
rurussian_mcp/memory/: __init__.py
rurussian_mcp/schemas/: __init__.py  atomic.py  auth.py  common.py  memory.py  workflow.py
rurussian_mcp/services/: __init__.py  auth_service.py  backend_client.py  language_service.py  memory_service.py  workflow_service.py
rurussian_mcp/tools/: __init__.py  atomic.py  auth.py  memory.py  workflow.py
